--- a/WebContent/SpryAssets/SpryMenuBarHorizontal.css
+++ b/WebContent/SpryAssets/SpryMenuBarHorizontal.css
@@ -13,6 +13,7 @@
 /* The outermost container of the Menu Bar, an auto width box with no margin or padding */
 ul.MenuBarHorizontal
 {
+	margin: 0;
 	padding: 0;
 	list-style-type: none;
 	font-size: 100%;
@@ -95,21 +96,19 @@ ul.MenuBarHorizontal a
 	cursor: pointer;
 	background-color: #211F1F;
 	padding: 0.5em 0.75em;
-	color: #FFF;
+	color: #fff;
 	text-decoration: none;
-	
-	
 }
 /* Menu items that have mouse over or focus have a blue background and white text */
 ul.MenuBarHorizontal a:hover, ul.MenuBarHorizontal a:focus
 {
-	background-color: #33C;
+	background-color: #ccc;
 	color: #FFF;
 }
 /* Menu items that are open with submenus are set to MenuBarItemHover with a blue background and white text */
 ul.MenuBarHorizontal a.MenuBarItemHover, ul.MenuBarHorizontal a.MenuBarItemSubmenuHover, ul.MenuBarHorizontal a.MenuBarSubmenuVisible
 {
-	background-color: #CCC;
+	background-color: #ccc;
 	color: #FFF;
 }
 
